--- a/composer.json
+++ b/composer.json
@@ -6,18 +6,20 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-debugbar": "^3.9",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "yajra/laravel-datatables-oracle": "^10.3",
-        "spatie/laravel-medialibrary": "^10.7"
+        "laravel/ui": "^4.2",
+        "orangehill/iseed": "^3.0",
+        "spatie/laravel-medialibrary": "^10.7",
+        "yajra/laravel-datatables-oracle": "^10.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
-        "laravel/ui": "^4.2",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.0",
