--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,16 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "laravelcollective/html": "^6.4",
         "orangehill/iseed": "^3.0",
         "spatie/laravel-medialibrary": "^10.7",
+        "wecodelaravel/laravel-menu": "dev-master",
         "yajra/laravel-datatables-oracle": "^10.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
-        "laravel/sail": "^1.18",
+        "laravel/sail": "^1.26",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.0",
@@ -66,6 +68,12 @@
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true
+        }
+    },
+    "repositories": {
+        "menu": {
+            "type": "vcs",
+            "url": "https://github.com/wecodelaravel/laravel-menu"
         }
     },
     "minimum-stability": "stable",
