--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravelcollective/html": "^6.4",
         "orangehill/iseed": "^3.0",
         "spatie/laravel-medialibrary": "^10.7",
+        "spatie/laravel-sitemap": "^7.0",
         "wecodelaravel/laravel-menu": "dev-master",
         "yajra/laravel-datatables-oracle": "^10.3"
     },
