--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "laravelcollective/html": "^6.4",
+        "opcodesio/log-viewer": "^3.6",
         "orangehill/iseed": "^3.0",
         "spatie/laravel-medialibrary": "^10.7",
         "spatie/laravel-sitemap": "^7.0",
