--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravelcollective/html": "^6.4",
         "opcodesio/log-viewer": "^3.6",
         "orangehill/iseed": "^3.0",
+        "spatie/image-optimizer": "^1.8",
         "spatie/laravel-medialibrary": "^10.7",
         "spatie/laravel-sitemap": "^7.0",
         "wecodelaravel/laravel-menu": "dev-master",
